# image-validator

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
image_validator/: ConfigManager.py  ImageFinder.py  SearchMethods.py  main.py
image_validator/internals/: config.yaml
tests/: ConfigManager.py  ImageFinder.py  SearchMethods.py
tests/store/: mydoc.md  test.pn
